[UPDATE] update projects